--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.6.0",
+    "@material-ui/icons": "^3.0.1",
     "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^17.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-event-calendar": "^0.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
