--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^17.1.0",
+    "material-ui-datetimepicker": "^1.0.7",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-event-calendar": "^0.3.0",
