--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
       "react/jsx-filename-extension": [
         "js",
         "jsx"
-      ]
+      ],
+      "jsx-a11y/click-events-have-key-events": 0
     }
   },
   "browserslist": [
