--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^17.1.0",
     "material-ui-datetimepicker": "^1.0.7",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-event-calendar": "^0.3.0",
