--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-event-calendar": "^0.3.0",
+    "react-google-recaptcha": "^1.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "typeface-roboto": "0.0.54"
