--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "^3.0.1",
+    "axios": "^0.18.0",
     "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^17.1.0",
     "material-ui-datetimepicker": "^1.0.7",
