--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-dom": "^16.6.3",
     "react-event-calendar": "^0.3.0",
     "react-google-recaptcha": "^1.0.5",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
