--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
         "jsx"
       ],
       "jsx-a11y/click-events-have-key-events": 0,
-      "jsx-a11y/no-nested-ternary": 0
+      "jsx-a11y/no-nested-ternary": 0,
+      "react/forbid-prop-types": 0,
+      "react/no-typos": 0,
+      "no-shadow": 0
     }
   },
   "browserslist": [
