--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
       "jsx-a11y/no-nested-ternary": 0,
       "react/forbid-prop-types": 0,
       "react/no-typos": 0,
-      "no-shadow": 0
+      "no-shadow": 0,
+      "no-nested-ternary": 0
     }
   },
   "browserslist": [
