--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^17.1.0",
     "material-ui-datetimepicker": "^1.0.7",
+    "moment": "^2.23.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-big-calendar": "^0.20.2",
     "react-dom": "^16.6.3",
-    "react-event-calendar": "^0.3.0",
     "react-google-recaptcha": "^1.0.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54"
