--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-form": "^8.0.4",
     "redux-thunk": "^2.3.0",
     "typeface-roboto": "0.0.54"
