--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
       "react/forbid-prop-types": 0,
       "react/no-typos": 0,
       "no-shadow": 0,
-      "no-nested-ternary": 0
+      "no-nested-ternary": 0,
+      "import/prefer-default-export": 0
     }
   },
   "browserslist": [
