--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^2.1.3",
     "react-slick": "^0.23.2",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
