--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "js",
         "jsx"
       ],
+      "react/prop-types": 0,
       "jsx-a11y/click-events-have-key-events": 0,
       "jsx-a11y/no-nested-ternary": 0,
       "react/forbid-prop-types": 0,
