--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
+    "chart.js": "^2.7.3",
     "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^17.1.0",
     "material-ui-datetimepicker": "^1.0.7",
@@ -14,6 +15,7 @@
     "radium": "^0.25.1",
     "react": "^16.6.3",
     "react-big-calendar": "^0.20.2",
+    "react-chartjs-2": "^2.7.4",
     "react-coverflow": "^0.2.17",
     "react-dom": "^16.6.3",
     "react-google-recaptcha": "^1.0.5",
