--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "axios": "^0.18.0",
     "date-fns": "^1.29.0",
     "eslint-config-airbnb": "^17.1.0",
+    "express": "^4.16.4",
+    "express-favicon": "^2.0.1",
     "material-ui-datetimepicker": "^1.0.7",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
