--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-favicon": "^2.0.1",
     "material-ui-datetimepicker": "^1.0.7",
     "moment": "^2.23.0",
+    "postinstall-build": "^5.0.3",
     "prop-types": "^15.6.2",
     "radium": "^0.25.1",
     "react": "^16.6.3",
@@ -31,6 +32,7 @@
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
+    "postinstall": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
