Creation of the dialog to add a receiver

--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
       "react/no-typos": 0,
       "no-shadow": 0,
       "no-nested-ternary": 0,
-      "import/prefer-default-export": 0
+      "import/prefer-default-export": 0,
+      "no-undef": 0,
+      "no-console": 0
     }
   },
   "browserslist": [
