--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-devtools-extension": "^2.13.7",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
+    "reset-css": "^4.0.1",
     "slick-carousel": "^1.8.1",
     "typeface-roboto": "0.0.54"
   },
