--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.6.0",
+    "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.8",
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
     "date-fns": "^1.29.0",
@@ -16,11 +17,11 @@
     "postinstall-build": "^5.0.3",
     "prop-types": "^15.6.2",
     "radium": "^0.25.1",
-    "react": "^16.6.3",
-    "react-big-calendar": "^0.20.2",
+    "react": "^16.7.0-alpha.2",
+    "react-big-calendar": "^0.20.3",
     "react-chartjs-2": "^2.7.4",
     "react-coverflow": "^0.2.17",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.7.0-alpha.2",
     "react-google-recaptcha": "^1.0.5",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
